objects/SmarterPay_Payment_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>APIKey__c</fullName>
        <label>APIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Repeat_Payment_Dates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Manage Repeat Payment Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmarterPay_User_Name__c</fullName>
        <label>SmarterPay User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Authenticate_Capture_Ecommerce__c</fullName>
        <label>Standard Authenticate Capture Ecommerce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Authenticate_Capture_MOTO__c</fullName>
        <label>Standard Authenticate Capture MOTO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Authenticate_Release__c</fullName>
        <label>Standard Authenticate Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Deferred_Capture_Ecommerce__c</fullName>
        <label>Standard Deferred Capture Ecommerce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Deferred_Capture_MOTO__c</fullName>
        <label>Standard Deferred Capture MOTO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Deferred_Release__c</fullName>
        <label>Standard Deferred Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Ecommerce__c</fullName>
        <label>Standard Ecommerce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_MOTO__c</fullName>
        <label>Standard MOTO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Refund__c</fullName>
        <label>Standard Refund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Repeat__c</fullName>
        <label>Standard Repeat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SmarterPay Payment Config</label>
</CustomObject>